<resources>
    <string name="app_name">ETago</string>


    <!--ONBOARDING HEADING AND DESCRIPTIONS-->
    <string name="feature_1">Image Upload and Processing</string>
    <string name="feature_2">Privacy</string>
    <string name="feature_3">Image Censorship</string>
    <string name="feature_4">Alerts</string>
    <string name="feat_desc_1">Upload or capture product review images.</string>
    <string name="feat_desc_2">Scan images to identify exposed personal information.</string>
    <string name="feat_desc_3">Automatic censorship options, allowing users to review and confirm the redactions before saving or sharing the images.</string>
    <string name="feat_desc_4">Notifies users and provides guidance on appropriate actions to take, ensuring user privacy and data protection.</string>

    <!--FORGOT PASSWORD -->
    <string name="forgot_pass_txt"><u>Forgot Password?</u></string>
    <string name="forgot_pass_msg">Please provide your email for the instructions for password reset.</string>
    <string name="forgot_pass_dialog_title">Password Reset Instructions have been sent</string>
    <string name="forgot_pass_dialog_text">A password reset has been sent to your email address. Please check your email to reset your password and then login.</string>

    <!--GOOGLE/FB SIGN IN-->
    <string name="account_signin_txt">Creating account...</string>

    <!--DELETING ACCOUNT CONFIRMATION    -->
    <string name="delete_acc_dialog_title">Account Deletion</string>
    <string name="delete_acc_sub_title">Are you sure you want to delete your E-Tago account? \n Enter your password to confirm.</string>
    <string name="deleted_account_message">Your account has been successfully deleted. We hope to see you again soon!</string>


    <!--FB SIGN UP-->
    <string name="facebook_app_id">1066984481151589</string>
    <string name="fb_login_protocol_scheme">fb1066984481151589</string>
    <string name="facebook_client_token">b940256518cb285e4066b724af809521</string>


    <!--NAVIGATION DRAWER-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="terms_of_service"><u>Terms of Service</u></string>
    <string name="privacy_policy"><u>Privacy Policy</u>.</string>

    <!-- ABOUT US TEXTS    -->
    <string name="nga_desc">\t\t\t\t\tNext-Gen Artisans (NGA) is an innovative startup, formed by a group of Computer Science students, with a focus on Computational and Data Sciences. \n\n\t\t\t\t\tOur mission is the development of groundbreaking digital products through state-of-the-art technologies and research. \n\n\t\t\t\t\tOur expertise spans machine learning, artificial intelligence, web and mobile development allowing us to craft bespoke solutions that drive transformation in our clients’ businesses. \n\n\t\t\t\t\tAs we navigate the tech industry, we aim to deliver exceptional software solutions, set new standards in the digital domain, and support our clients in achieving their business goals.
</string>
    <string name="mission_lbl">Our Mission</string>
    <string name="mission_txt">\t\t\t\t\tNext-Gen Artisan\'s mission is to pioneer transformative digital solutions using advanced technologies and research. \n\n\t\t\t\t\tOur focus is on delivering bespoke software that exceeds client expectations and drives business growth, leveraging our expertise in machine learning, artificial intelligence, and web and mobile development.</string>
    <string name="vision_lbl">Our Vision</string>
    <string name="vision_txt">\t\t\t\t\tNext-Gen Artisan\'s vision is to be at the forefront of digital innovation, setting new standards in technology. \n\n\t\t\t\t\tWe aim to redefine business operations through our contributions, fostering a future where our technological advancements empower clients and society with endless possibilities for progress.</string>
    <string name="pioneer_lbl">Our Pioneer Product</string>
    <string name="pioneer_txt">\t\t\t\t\tE-Tago is an Android-based mobile application for privacy preservation and image censorship of personal information in e-commerce product review images. \n\n\t\t\t\t\tThis application will serve as a tool to safeguard personal information that might be shared on e-commerce platforms, in particular, product review images.</string>
    <string name="team_lbl">Meet the Team</string>
    <string name="alex">John Alex Robles</string>
    <string name="alex_desc">Project Manager / \nTeam Leader / Lead Developer</string>
    <string name="bel">Ronabel Abrugar</string>
    <string name="bel_desc">AI &amp; Machine Learning \n Specialist</string>
    <string name="cel">Joricel Roldan</string>
    <string name="cel_desc">UI / UX Designer</string>
    <string name="alleah">Alleah Gadores</string>
    <string name="alleah_desc">UI / UX Designer</string>
    <string name="carl">Carl Dominic Ochoa</string>
    <string name="carl_desc">Research &amp; Development \nSpecialist</string>
    <string name="lyko">Lyko Miguel Santiago</string>
    <string name="lyko_desc">Quality Assurance \nEngineer</string>
    <string name="contact_lbl">Contact Us</string>
    <string name="contact_txt">Feel free to reach us!</string>
    <string name="contact_email">nextgen.artisans18@gmail.com</string>
    <string name="contact_number">09217027787</string>


</resources>