<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".about_us.AboutUs"
    android:background="@color/white"
    android:id="@+id/drawer_layout"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_container_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/custom_toolbar_profile"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/light_blue"
                android:elevation="10dp"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/about_us_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="About Us"
                    android:fontFamily="@font/montserrat_bold"
                    android:textColor="@color/white"
                    android:textSize="32sp"
                    android:layout_gravity="center"
                    />

            </androidx.appcompat.widget.Toolbar>

            <androidx.cardview.widget.CardView
                android:id="@+id/about_us_header"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="-20dp"
                app:cardBackgroundColor="@color/light_blue"
                app:cardCornerRadius="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/about_us_info_containers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:elevation="10dp"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                app:layout_constraintTop_toBottomOf="@+id/about_us_header"
                tools:layout_editor_absoluteX="0dp">


                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/nga_logo"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/nga_logo_no_text" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/nga_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:gravity="center"
                    android:text="@string/nga_desc"
                    android:textColor="@color/alt_black"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/mission_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/mission_lbl"
                    android:textColor="@color/alt_black"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/mission_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:gravity="center"
                    android:text="@string/mission_txt"
                    android:textColor="@color/alt_black"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/vision_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/vision_lbl"
                    android:textColor="@color/alt_black"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/vision_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:gravity="center"
                    android:text="@string/vision_txt"
                    android:textColor="@color/alt_black"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/pioneer_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/pioneer_lbl"
                    android:textColor="@color/alt_black"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/etago_logo"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/e_tago_splash_logo_dark" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/pioneer_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:gravity="center"
                    android:text="@string/pioneer_txt"
                    android:textColor="@color/alt_black"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/team_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/team_lbl"
                    android:textColor="@color/alt_black"
                    android:textSize="18sp" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/alex_pic"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/alex_pic"
                    app:shapeAppearanceOverlay="@style/roundedImageView" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/alex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:gravity="center"
                    android:text="@string/alex"
                    android:textColor="@color/alt_black"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/alex_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_italic"
                    android:gravity="center"
                    android:text="@string/alex_desc"
                    android:textColor="@color/alt_black"
                    android:textSize="14sp" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/bel_pic"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/bel_pic"
                    app:shapeAppearanceOverlay="@style/roundedImageView" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/bel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:gravity="center"
                    android:text="@string/bel"
                    android:textColor="@color/alt_black"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/bel_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_italic"
                    android:gravity="center"
                    android:text="@string/bel_desc"
                    android:textColor="@color/alt_black"
                    android:textSize="14sp" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/cel_pic"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/cel_pic"
                    app:shapeAppearanceOverlay="@style/roundedImageView" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/cel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:gravity="center"
                    android:text="@string/cel"
                    android:textColor="@color/alt_black"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/cel_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_italic"
                    android:gravity="center"
                    android:text="@string/cel_desc"
                    android:textColor="@color/alt_black"
                    android:textSize="14sp" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/alleah_pic"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/alleah_pic"
                    app:shapeAppearanceOverlay="@style/roundedImageView" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/alleah"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:gravity="center"
                    android:text="@string/alleah"
                    android:textColor="@color/alt_black"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/alleah_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_italic"
                    android:gravity="center"
                    android:text="@string/alleah_desc"
                    android:textColor="@color/alt_black"
                    android:textSize="14sp" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/carl_pic"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/carl_pic"
                    app:shapeAppearanceOverlay="@style/roundedImageView" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/carl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:gravity="center"
                    android:text="@string/carl"
                    android:textColor="@color/alt_black"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/carl_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_italic"
                    android:gravity="center"
                    android:text="@string/carl_desc"
                    android:textColor="@color/alt_black"
                    android:textSize="14sp" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/lyko_pic"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/lyko_pic"
                    app:shapeAppearanceOverlay="@style/roundedImageView" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lyko"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:gravity="center"
                    android:text="@string/lyko"
                    android:textColor="@color/alt_black"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lyko_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_italic"
                    android:gravity="center"
                    android:text="@string/lyko_desc"
                    android:textColor="@color/alt_black"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/contact_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/contact_lbl"
                    android:textColor="@color/alt_black"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/contact_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:gravity="center"
                    android:text="@string/contact_txt"
                    android:textColor="@color/alt_black"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/contact_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:gravity="center"
                    android:text="@string/contact_email"
                    android:textColor="@color/alt_black"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/contact_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:gravity="center"
                    android:text="@string/contact_number"
                    android:textColor="@color/alt_black"
                    android:textSize="14sp"
                    android:layout_marginBottom="50dp"/>


            </LinearLayout>





        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



    <com.google.android.material.navigation.NavigationView
        android:id="@+id/about_nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        app:headerLayout="@layout/header"
        app:itemBackground="@drawable/custom_menu_selector"
        app:itemIconTint="@drawable/custom_menu_item_icon_selector"
        app:itemTextAppearance="@style/menuText"
        app:itemTextColor="@drawable/custom_menu_item_selector"
        app:menu="@menu/main_menu" />

</androidx.drawerlayout.widget.DrawerLayout>